--- a/composer.json
+++ b/composer.json
@@ -29,12 +29,23 @@
     "require": {
         "php": "^8.0",
         "alexgeno/phone-verification": "^1.0",
-        "symfony/framework-bundle": "^6.1"
+        "symfony/framework-bundle": "^6.0"
     },
 
     "config": {
         "sort-packages": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "require-dev": {
+        "snc/redis-bundle": "^4.6",
+        "predis/predis": "^2.2",
+        "m6web/redis-mock": "^5.6",
+        "php-mock/php-mock-phpunit": "^2.7",
+        "symfony/console": "^6.0",
+        "symfony/notifier": "^6.0",
+        "symfony/test-pack": "^1.1",
+        "symfony/translation": "^6.0",
+        "symfony/yaml": "^6.0"
+    }
 }
