--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -17,6 +17,9 @@
         <testsuite name="Application">
             <directory suffix="Test.php">./tests/Application</directory>
         </testsuite>
+        <testsuite name="Command">
+            <directory suffix="Test.php">./tests/Command</directory>
+        </testsuite>
     </testsuites>
     <coverage includeUncoveredFiles="true">
         <include>
