Make container parameters using the configuration

--- a/tests/Application/config/packages/doctrine_mongodb.yaml
+++ b/tests/Application/config/packages/doctrine_mongodb.yaml
@@ -8,4 +8,4 @@ doctrine_mongodb:
     default_database: phone_verification
     document_managers:
         default:
-            auto_mapping: true
+            auto_mapping: false
