--- a/tests/Application/config/packages/alex_geno_phone_verification.yaml
+++ b/tests/Application/config/packages/alex_geno_phone_verification.yaml
@@ -1,32 +1,26 @@
-parameters:
-  phone_verification.rate_limit.initiate.period_secs: '%env(PHONE_VERIFICATION_RATE_LIMIT_INITIATE_PERIOD_SECS)%'
-  phone_verification.rate_limit.initiate.count: '%env(PHONE_VERIFICATION_RATE_LIMIT_INITIATE_COUNT)%'
-  phone_verification.rate_limit.complete.period_secs: '%env(PHONE_VERIFICATION_RATE_LIMIT_COMPLETE_PERIOD_SECS)%'
-  phone_verification.rate_limit.complete.count: '%env(PHONE_VERIFICATION_RATE_LIMIT_COMPLETE_COUNT)%'
-  phone_verification_otp_length: '%env(PHONE_VERIFICATION_OTP_LENGTH)%'
 alex_geno_phone_verification:
   storage:
     driver: redis
     redis:
       connection: default
 #      settings:
-#        prefix:
-#        session_key:
-#        session_counter_key:
+#        prefix: test
+#        session_key: test_session
+#        session_counter_key: test_session_counter
     mongodb:
       connection: default
 #      settings:
 #        collection_session: session
 #        collection_session_counter: session_counter
   sender:
-    transport: twilio
+    transport: vonage
   manager:
     otp:
-      length: '%phone_verification_otp_length%'
+      length: '%env(int:PHONE_VERIFICATION_OTP_LENGTH)%'
     rate_limits:
-      initiate: # for every 'to' no more than 'count' initiations over 'period_secs' seconds
-        period_secs: '%phone_verification.rate_limit.initiate.period_secs%'
-        count: '%phone_verification.rate_limit.initiate.count%'
-      complete: # for every 'to' no more than 'count' failed completions over 'period_secs' seconds
-        period_secs: '%phone_verification.rate_limit.complete.period_secs%' # this is also the expiration period for OTP
-        count: '%phone_verification.rate_limit.complete.count%'
+      initiate: #for every 'to' no more than 'count' initiations over 'period_secs' seconds
+        period_secs: '%env(int:PHONE_VERIFICATION_RATE_LIMIT_INITIATE_PERIOD_SECS)%'
+        count: '%env(int:PHONE_VERIFICATION_RATE_LIMIT_INITIATE_COUNT)%'
+      complete: #for every 'to' no more than 'count' failed completions over 'period_secs' seconds
+        period_secs: '%env(int:PHONE_VERIFICATION_RATE_LIMIT_COMPLETE_PERIOD_SECS)%' # this is also the expiration period for OTP
+        count: '%env(int:PHONE_VERIFICATION_RATE_LIMIT_COMPLETE_COUNT)%'
