--- a/.gitattributes
+++ b/.gitattributes
@@ -2,5 +2,5 @@
 .gitattributes export-ignore
 .gitignore export-ignore
 tests export-ignore
-phpunit.xml export-ignore
+phpunit.xml.dist export-ignore
 phpstan.neon.dist export-ignore
