--- a/composer.json
+++ b/composer.json
@@ -55,12 +55,13 @@
     "prefer-stable": true,
     "require-dev": {
         "doctrine/mongodb-odm-bundle": "^4.6",
+        "friendsofphp/php-cs-fixer": "^3.26",
         "m6web/redis-mock": "^5.6",
         "php-mock/php-mock-phpunit": "^2.7",
         "symfony/message-bird-notifier": "^6.0",
+        "symfony/test-pack": "^1.1",
         "symfony/twilio-notifier": "^6.0",
         "symfony/vonage-notifier": "^6.0",
-        "symfony/test-pack": "^1.1",
         "symfony/yaml": "^6.0"
     }
 }
