--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,7 @@
         "friendsofphp/php-cs-fixer": "^3.26",
         "m6web/redis-mock": "^5.6",
         "php-mock/php-mock-phpunit": "^2.7",
+        "phpstan/phpstan": "^1.10",
         "symfony/message-bird-notifier": "^6.0",
         "symfony/test-pack": "^1.1",
         "symfony/twilio-notifier": "^6.0",
