--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "alexgeno/phone-verification-bundle",
-    "description":"A Symfony bundle to verify a phone via notification channels. Any notification channel can be used as a sender. Redis or MongoDb can be used a storage.",
+    "description":"A bundle for phone verification via the Symfony Notifier SMS channel. Any SMS service can be used as a sender. Redis or MongoDB can be used as a storage.",
     "type": "symfony-bundle",
     "keywords":["phone", "verification", "verify", "sms", "2fa", "2factor","authentication", "signin",
         "signup", "redis", "mongo", "mongodb", "verify-by-phone", "otp", "notification", "notification-channel",
@@ -40,9 +40,7 @@
         "symfony/framework-bundle": "^6.0",
         "symfony/translation": "^6.0",
         "symfony/console": "^6.0",
-        "symfony/notifier": "^6.0",
-        "predis/predis": "^2.2",
-        "snc/redis-bundle": "^4.6"
+        "symfony/notifier": "^6.0"
     },
 
     "config": {
@@ -54,6 +52,8 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require-dev": {
+        "predis/predis": "^2.2",
+        "snc/redis-bundle": "^4.6",
         "doctrine/mongodb-odm-bundle": "^4.6",
         "friendsofphp/php-cs-fixer": "^3.26",
         "m6web/redis-mock": "^5.6",
