--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,8 +14,8 @@
         <testsuite name="Unit">
             <directory suffix="Test.php">./tests/Unit</directory>
         </testsuite>
-        <testsuite name="Application">
-            <directory suffix="Test.php">./tests/Application</directory>
+        <testsuite name="Controller">
+            <directory suffix="Test.php">./tests/Controller</directory>
         </testsuite>
         <testsuite name="Command">
             <directory suffix="Test.php">./tests/Command</directory>
