--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,9 +18,9 @@ jobs:
       matrix:
         stability: [ prefer-stable ]
         php-version: [ '8.1' ]
-        symfony-version: [ '6.0' ]
+        symfony-version: [ '6.3' ]
 
-    name: PHP ${{ matrix.php-version }} - Symfony ${{ matrix.symfony-require }}
+    name: PHP ${{ matrix.php-version }} - Symfony ${{ matrix.symfony-version }}
 
     steps:
       - name: Checkout code
@@ -34,7 +34,7 @@ jobs:
           tools: composer:v2
           coverage: xdebug
 
-      - name: Install composer dependencies
+      - name: Install dependencies
         uses: nick-invision/retry@v2
         with:
           command: composer update --${{ matrix.stability }} --prefer-dist --no-interaction --no-plugins --no-scripts --no-progress
