composer require webapp

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -31,8 +31,8 @@
         <ini name="error_reporting" value="1" />
 
         <env name="SYMFONY_DEPRECATIONS_HELPER" value="max[self]=0" />
-        <server name="APP_ENV" value="test" />
-        <server name="APP_DEBUG" value="true" />
+        <server name="APP_ENV" value="dev" />
+        <server name="APP_DEBUG" value="false" />
         <server name="TWILIO_DSN" value="null://null" />
         <server name="VONAGE_DSN" value="null://null" />
         <server name="PHONE_VERIFICATION_OTP_LENGTH" value="6" />
