Add CI: workflow/tests.yml

--- a/tests/TestApplication/config/packages/notifier.yaml
+++ b/tests/TestApplication/config/packages/notifier.yaml
@@ -3,3 +3,4 @@ framework:
         texter_transports:
             vonage: '%env(VONAGE_DSN)%'
             twilio: '%env(TWILIO_DSN)%'
+            messagebird: '%env(MESSAGEBIRD_DSN)%'
