--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: true
       matrix:
         stability: [ prefer-stable ]
-        php-version: [ '8.1' ]
+        php-version: [ '8.1', '8.2' ]
         symfony-version: [ '6.3' ]
 
     name: PHP ${{ matrix.php-version }} - Symfony ${{ matrix.symfony-version }}
